--- a/html/about.html
+++ b/html/about.html
@@ -1,10 +1,101 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>CloudFront Rule Engine</title>
+</head>
+
 <body>
+	<!--Header(start)-->
+	<table id="header" border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="#0066cc">
+		<tbody><tr>
+			<td>
+				<table border="0" cellpadding="15" cellspacing="0" width="90%" align="center">
+					<tbody><tr>
+	
+						<td>
+							<font face="Verdana" size="8" color="white">
+								<b>CloudFront Rule Engine</b>
+							</font>
+						</td>
 
-<h1>About US</h1>
+						<td width="15%">
+							
+						</td>
 
-<p>This is the version 1 of the about us</p>
+						<td>
+							<a href="/index.html" style="text-decoration:none">
+								<font face="Verdana" size="5" color="white">
+									Home
+								</font>
+							</a>
+						</td>
 
-</body>
-</html>
+						<td>
+							|
+						</td>
+
+						<td>
+							<a href="/about.html" style="text-decoration:none">
+								<font face="Verdana" size="5" color="white">
+									About
+								</font>
+							</a>
+						</td>
+
+						<td>
+							|
+						</td>
+
+						<td>
+							<a href="/admin.html" style="text-decoration:none">
+								<font face="Verdana" size="5" color="white">
+									Admin
+								</font>
+							</a>
+						</td>
+
+					</tr>
+				</tbody></table>
+			</td>
+		</tr>
+	</tbody></table>
+	<!--Header(end)-->
+
+
+
+	<!--About(start)-->
+	<table id="about" border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="black">
+		<tbody><tr>
+			<td>
+				<table border="0" cellpadding="15" cellspacing="0" width="80%" align="center">
+					<tbody><tr>
+						<td height="180" align="left" valign="middle" colspan="2">
+							<font face="Verdana" size="7" color="#0066cc">
+								About
+							</font>
+							<hr align="left" color="#0066cc" width="90">
+						</td>
+					</tr>
+
+					<tr>
+						<td>
+							<font face="Verdana" size="4" color="white">
+								This page was brought to you by AWS Solutions Architects.
+							</font>
+						</td>
+					</tr>
+
+				</tbody></table>
+				<hr color="black">
+				<hr color="black">
+				<hr color="black">
+			</td>
+		</tr>
+	</tbody></table>
+	<!--About(end)-->
+
+
+
+</body></html>
