--- a/html/admin.html
+++ b/html/admin.html
@@ -82,7 +82,7 @@
 					<tr>
 						<td>
 							<font face="Verdana" size="4" color="white">
-								Imaging that you have just got access to an amazing internal dashboard of this website, only reserved for admins.
+								Imagine that you just got access to an amazing internal dashboard of this website, only reserved for admins.
 							</font>
 						</td>
 					</tr>
