--- a/html/index.html
+++ b/html/index.html
@@ -84,9 +84,9 @@
 							<font face="Verdana" size="4" color="white">
 								This website demonstrates the usage of CloudFront Function to execute rules when processing incoming HTTP requests. Rules are stored in KVS and can be viewed in the rules.array file. This solution allows customers to dyanmically customize the processing of HTTP requests, wihtout changing CloudFront configuration.
                                 <hr color="black">
-                                To test the embargoedCountries rule, by connecting using a VPN from France or Ukrain. You will be be blocked with a 403 response code.
+                                To test the embargoedCountries rule, by connecting using a VPN from France or Ukraine. You will be be blocked with a 403 response code.
                                 <hr color="black">
-                                This page makes API calls to two backends based on Lambda+APIG. Each call is dynamically routed to a different API endpoint wihtout any configuration needed in CloudFront.
+                                This page makes API calls to two backends based on Lambda+APIG. Each call is dynamically routed to a different API endpoint without any needed configuration in CloudFront.
                                 <table>
                                     <tr>
                                         <td><button onclick='api1()'>Fetch clients</button></td>
