--- a/html/login.html
+++ b/html/login.html
@@ -99,8 +99,9 @@
 	<!--About(end)-->
 
     <script>
+		// TODO autmate this part https://github.com/aws-samples/amazon-cloudfront-functions/blob/main/kvs-jwt-verify/generate-jwt.sh
         function login() {
-            document.cookie = "session=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyLCJuYmYiOjE1MTYyMzkwMjIsImV4cCI6MTcxNjIzOTAyMn0.jyu6HjS95wU8iSofQ8nBlmPjFYODxn4PQAdFM-Cv8JY";
+            document.cookie = "session=ewogICJhbGciOiAiSFMyNTYiLAogICJ0eXAiOiAiSldUIgp9.ewogICJzdWIiOiAiMTIzNDU2Nzg5MCIsCiAgIm5hbWUiOiAiSm9obiBEb2UiLAogICJpYXQiOiAxNTE2MjM5MDIyLCAKICAibmJmIiA6IDE2MTYyMzkzMiwKICAiZXhwIiA6MjY3ODg0MDU5MyAKfQ.ZLErHdrsixNlmx_QIORTtwedxBYvsWeghm6pYXCiUdo";
             window.location.href = "/admin.html"
         }
     
